--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
       <div class="gallery-item">+ Add Photo</div>
       <div class="gallery-item">+ Add Photo</div>
       <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      <div class="gallery-item">+ Add Photo</div>
+      
     </div>
   </section>
 
